# SOP-Team

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agent.py  pyproject.toml  requirements.txt  run.sh
.claude/agents/: coordinator.md  devops.md
.github/workflows/: publish.yml
src/sop_team_framework/: __init__.py  agent.py  py.typed
src/sop_team_framework/agents/: architect.md  engineer.md  product-manager.md  qa-engineer.md
